iniziata seconda sezione

--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,2 +1,3 @@
-$colore-bottoni: #30488F;
-$testo-principale: #58402C;
+$colore-bottoni: #30488f;
+$testo-principale: #58402c;
+$colore-pesca-principale: #ffe7d2;
