--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -1,6 +1,6 @@
 main {
     @import "partials/_sezione1.scss";
-    //@import "partials/_sezione2.scss";
+    @import "partials/_sezione2.scss";
     //@import "partials/_sezione3.scss";
     //@import "partials/_sezione4.scss";
     //@import "partials/_sezione5.scss";
