--- a/src/scss/partials/_mixin.scss
+++ b/src/scss/partials/_mixin.scss
@@ -3,3 +3,12 @@
     justify-content: center;
     align-items: center;
 }
+
+@mixin primo-titolo {
+    width: 600px;
+    height: 100px;
+    text-align: center;
+    margin: auto;
+    padding-top: 70px;
+            
+}
