aggiunto colore principale al testo in section2

--- a/src/scss/partials/_sezione2.scss
+++ b/src/scss/partials/_sezione2.scss
@@ -1,15 +1,10 @@
 .section2 {
-    height: 300vh;
-    background-color: $colore-pesca-principale;
-    
-    h2 {
-        @include primo-titolo; 
-    }
-       
+  height: 300vh;
+  background-color: $colore-pesca-principale;
+  color: $testo-principale;
+  /*border: 1px solid red;*/
 
-        
-        
-    
+  h2 {
+    @include primo-titolo;
+  }
 }
-
-
