--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,16 +1,20 @@
 header {
   height: 70px;
-  width: 77%;
-  border-bottom: 1px solid black;
+  background-color: white;
+  position: fixed;
+  width: 100%;
+  box-shadow: 1px 1px 1px #cccccc, 1px 1px 2px rgb(202, 202, 202);
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   font-size: 14px;
   font-weight: bolder;
 
+
   nav {
-    width: 500px;
+    width: 450px;
+    margin-left: 230px;
 
     ul {
       @include flex-center;
