--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,3 +1,5 @@
 $colore-bottoni: #30488f;
 $testo-principale: #58402c;
 $colore-pesca-principale: #ffe7d2;
+$colore-bianco-principale: #FFFFFF;
+$colore-link: rgb(68, 18, 148)
