--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,7 +2,7 @@
 @import "partials/_reset.scss";
 @import "partials/_common.scss";
 @import "partials/_mixin.scss";
-
 @import "partials/_main.scss";
 @import "partials/_header.scss";
 @import "partials/_footer.scss";
+@import "partials/_messaggio.scss";
