prova di modifica delle altezze (rimossi vh)

--- a/src/scss/partials/_sezione3.scss
+++ b/src/scss/partials/_sezione3.scss
@@ -1,9 +1,8 @@
 .section3 {
 
-  //height: 400vh
   .sottosezione1,
   .sottosezione3 {
-    height: 100vh;
+    height: 650px;
     display: flex;
 
     .contenitore {
@@ -50,7 +49,7 @@
 
   .sottosezione2,
   .sottosezione4 {
-    height: 100vh;
+    height: 650px;
     display: flex;
 
     .contenitore {
