rimosse le altezze

--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -1,7 +1,7 @@
 footer {
-    height: 65vh;
     background-color: $colore-bianco-principale;
     color: $testo-principale;
+    padding-bottom: 50px;
 
     .contenitore {
         margin: auto;
