--- a/src/scss/partials/_sezione4.scss
+++ b/src/scss/partials/_sezione4.scss
@@ -1,7 +1,8 @@
 .section4 {
-    height: 125vh;
+
     background-color: $colore-pesca-principale;
     color: $testo-principale;
+    padding-bottom: 100px;
 
     .row-titolo {
         display: flex;
@@ -81,6 +82,7 @@
         display: flex;
         justify-content: center;
         margin-top: 50px;
+
 
         .or {
             @include or;
