--- a/src/scss/partials/_sezione1.scss
+++ b/src/scss/partials/_sezione1.scss
@@ -1,5 +1,7 @@
 .section1 {
-    height: 100vh;
+    //height: 100vh;
+    padding-top: 150px;
+    padding-bottom: 150px;
     width: 77%;
     margin: auto;
     display: flex;
